objects/jiffle__Mapping__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__FieldAPIName__c</fullName>
        <formula>jiffle__Mapping__r.jiffle__Field_API_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Field_Type__c</fullName>
        <label>Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Mapping_Type__c</fullName>
        <description>Used in mapping list API to differentiate between external user and meeting mappings</description>
        <formula>CASE(jiffle__Related_to_Object__c, &quot;Contact&quot;, &quot;Contact&quot;, &quot;Survey__c&quot;, &quot;Survey&quot;, &quot;Meeting&quot;)</formula>
        <label>Mapping Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Mapping_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Mapping UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jiffle__Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Mapping</label>
        <referenceTo>jiffle__Mapping__c</referenceTo>
        <relationshipLabel>Mappings</relationshipLabel>
        <relationshipName>Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__ObjAPIName__c</fullName>
        <formula>jiffle__Mapping__r.jiffle__Object_API_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Pick_values_from_SFDC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pick values from SFDC?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__QueryFieldAPIName__c</fullName>
        <formula>jiffle__Mapping__r.jiffle__Field_API_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Query Field API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__QueryObjAPIName__c</fullName>
        <formula>jiffle__Mapping__r.jiffle__Object_API_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Query Object API Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Related_to_Object__c</fullName>
        <label>Related to Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign</fullName>
                    <label>Master</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Survey__c</fullName>
                    <label>Survey</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jiffle__Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Mapping</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Enabled__c</columns>
        <columns>jiffle__Field_API_Name__c</columns>
        <columns>jiffle__Field_Label__c</columns>
        <columns>jiffle__Field_Type__c</columns>
        <columns>jiffle__Mapping_Type__c</columns>
        <columns>jiffle__Mapping_UUID__c</columns>
        <columns>jiffle__Object_API_Name__c</columns>
        <columns>jiffle__Object_Label__c</columns>
        <columns>jiffle__Mapping__c</columns>
        <columns>jiffle__Pick_values_from_SFDC__c</columns>
        <columns>jiffle__QueryFieldAPIName__c</columns>
        <columns>jiffle__QueryObjAPIName__c</columns>
        <columns>jiffle__Related_to_Object__c</columns>
        <columns>jiffle__Unique_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>jiffle__All_Mappings</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Enabled__c</columns>
        <columns>jiffle__Field_Label__c</columns>
        <columns>jiffle__Field_Type__c</columns>
        <columns>jiffle__Mapping_UUID__c</columns>
        <columns>jiffle__Object_Label__c</columns>
        <columns>jiffle__Mapping__c</columns>
        <columns>jiffle__Related_to_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MN-{0000}</displayFormat>
        <label>Mapping Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>